--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3.8-slim
+RUN apt-get update && apt-get install -y \
+    curl \
+    jq \
+ && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY . /app/
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-ENTRYPOINT ["python3", "main.py"]
+ENTRYPOINT ["./run.sh"]
